--- a/src/views/trains/index.hbs
+++ b/src/views/trains/index.hbs
@@ -35,6 +35,22 @@
 </div>
 {{/if}}
 
+<div class="card" style="margin-bottom: 20px;">
+    <form action="/trains" method="GET">
+        <div class="search-box" style="margin: 0;">
+            <input type="text" name="search" class="search-input" placeholder="Cari berdasarkan nama kereta atau tipe..." value="{{search}}">
+            <button type="submit" class="btn btn-primary">
+                <i class="fas fa-search"></i> Cari
+            </button>
+            {{#if search}}
+            <a href="/trains" class="btn btn-secondary">
+                <i class="fas fa-times"></i> Clear
+            </a>
+            {{/if}}
+        </div>
+    </form>
+</div>
+
 <div class="card">
     <div class="card-header">
         <h3 class="card-title"><i class="fas fa-list"></i> Semua Kereta</h3>
